--- a/about.qmd
+++ b/about.qmd
@@ -4,7 +4,7 @@ title: "About Me"
 
 ::: {.profile-container}
 ::: {.profile-image}
-![](img/cata.jpeg){.circle-image}
+![](img/Cata.jpeg){.circle-image}
 :::
 
 ::: {.profile-text}
