--- a/models/datasets.qmd
+++ b/models/datasets.qmd
@@ -1,36 +1,38 @@
 ---
 title: "Data and Research Question"
+editor_options: 
+  chunk_output_type: console
 ---
 
 ## Youth Risk Behavior Survey 2023
 
-The Youth Risk Behavior Survey (YRBS) is a...
+The Youth Risk Behavior Survey (YRBS) is a national survey that monitors health-related behaviors among high school students, including weapon carrying and associated risk factors.
 
 ### Dataset Overview
 
 -   **Source**: Centers for Disease Control and Prevention (CDC)
 -   **Year**: 2023
 -   **Target Population**: High school students
--   **Sample Size**: \[Add sample size\]
+-   **Sample Size**: Approximately 19,000 students nationwide
+
+### Research Question
+
+**How do logistic regression, lasso, k-nearest neighbors, and tree-based models compare in predicting school-based weapon carrying among adolescents based on risk and protective factors?**
 
 ### Key Variables for the Research Question
 
 The dataset includes information on various health-related behaviors:
 
-1.  **Demographic Variables**
-    -   ...
-    -   ...
-    -   ...
-2.  **Outcome**
-    -   ...
-    -   ...
-    -   ...
-    -   ...
-3.  **Predictors**
-    -   ...
-    -   ...
-    -   ...
-    -   ...
+1.  **Outcome**
+    -   Weapon Carrying (Carried a weapon on school property)
+
+2.  **Predictors**
+    -   Traumatic experiences
+    -   School Safety Perceptions
+    -   Bullying Experiences
+    -   Family Support
+    -   Social Media Use
+    -   Peer Relationships
 
 ### Data Preprocessing
 
@@ -38,6 +40,7 @@ The dataset includes information on various health-related behaviors:
 #| label: data-prep
 
 library(tidyverse)
+library(tidymodels)
 library(dissertationData)
 library(here)
 data(clean_yrbs_2023)
@@ -55,26 +58,30 @@ data(clean_yrbs_2023)
 
 ```{r}
 #| label: create-dataset
+#| eval: false
 
 # This is an example of how to create a dataset for a model.
 # You can use this as a template to create your own dataset.
 
 
 analysis_data <- clean_yrbs_2023 %>%
-    select(Homelessness, NotGoodMentalHealth, GradesSchool, SocialMedia, Sex, Age, Race, ) |>
-    filter(!is.na(NotGoodMentalHealth)) |>
-    mutate(
-        Homelessness = as.factor(Homelessness),
-        NotGoodMentalHealth = as.factor(NotGoodMentalHealth),
-        GradesSchool = as.factor(GradesSchool),
-        SocialMedia = as.factor(SocialMedia),
-        Sex = as.factor(Sex)
-    )
+    select(WeaponCarryingSchool, AttackedInNeighborhood, Bullying, 
+           SexualAbuseByOlderPerson, ParentalPhysicalAbuse, ParentSubstanceUse, 
+           ParentIncarceration, SchoolConnectedness, ParentalMonitoring, 
+           UnfairDisciplineAtSchool, Homelessness) |>
+    filter(!is.na(WeaponCarryingSchool)) %>% 
+    mutate(across(
+          c(ParentSubstanceUse, ParentIncarceration, SchoolConnectedness,
+            ParentalMonitoring, UnfairDisciplineAtSchool),
+          ~ as.numeric(.x) - 1
+          )) %>% 
+  mutate(across(
+    c(ParentSubstanceUse, ParentIncarceration, SchoolConnectedness,
+      ParentalMonitoring, UnfairDisciplineAtSchool),
+    ~ factor(.x)
+  ))
 
-# This is extremly important to save the dataset in the models folder!
-# Without this, the model will not be able to find the dataset.
 
-saveRDS(analysis_data, here::here("models", "data", "analysis_data.rds"))
 
 ```
 
@@ -83,11 +90,12 @@ saveRDS(analysis_data, here::here("models", "data", "analysis_data.rds"))
 ```{r}
 #| label: split-dataset
 #| include: false
+#| eval: false
 
 set.seed(1990)
 
 analysis_split <- initial_split(analysis_data,
-    strata = NotGoodMentalHealth
+    strata = WeaponCarryingSchool
 )
 
 analysis_train <- training(analysis_split)
@@ -95,8 +103,7 @@ analysis_test <- testing(analysis_split)
 
 analysis_split
 
-saveRDS(analysis_train, here::here("models", "data", "analysis_train.rds"))
-saveRDS(analysis_test, here::here("models", "data", "analysis_test.rds"))
+
 
 ```
 
@@ -104,12 +111,12 @@ saveRDS(analysis_test, here::here("models", "data", "analysis_test.rds"))
 
 ```{r}
 #| label: cross-validation
-#| include: false
+#| eval: false
 
 analysis_folds <- vfold_cv(analysis_train,
     v = 5
 )
 analysis_folds
 
-saveRDS(analysis_folds, here::here("models", "data", "analysis_folds.rds"))
+
 ```
