--- a/models/logistic.qmd
+++ b/models/logistic.qmd
@@ -142,12 +142,22 @@ roc_plot_training
 ```{r}
 #| label: visualizations
 
-
 tidy_model %>% 
-  ggplot(aes(x = estimate, y = term)) +
-  geom_line()
-
-# Add your visualizations here
+  ggplot(aes(x = estimate, y = reorder(term, estimate))) +
+  geom_point(size = 3) +
+  geom_errorbarh(aes(xmin = conf.low, xmax = conf.high), height = 0.2) +
+  geom_vline(xintercept = 1, linetype = "dashed", color = "red") +
+  scale_x_log10() +
+  labs(
+    x = "Odds Ratio (log scale)",
+    y = "Predictors",
+    title = "Forest Plot of Logistic Regression Coefficients"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.y = element_text(size = 10),
+    plot.title = element_text(hjust = 0.5)
+  )
 ```
 
 
